src/objects/Business_Plan__c/Business_Plan__c.object-meta.xml
<CustomObject>
    <label>Business Plan</label>
    <nameField>
        <displayFormat>BP-{0000000}</displayFormat>
        <label>Business Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>