src/objects/Business_Plan__c/fields/A_A_service_s_you_intend_to_sell__c.field-meta.xml
<CustomField>
    <fullName>A_A_service_s_you_intend_to_sell__c</fullName>
    <defaultValue>&apos;Enter Service&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>*A&amp;A service(s) you intend to sell</label>
    <type>TextArea</type>
</CustomField>