src/objects/Business_Plan__c/fields/Investment_Number__c.field-meta.xml
<CustomField>
    <fullName>Investment_Number__c</fullName>
    <label>Investment Count</label>
    <summaryForeignKey>Investments_in_Lab_and_Demo_Equipment__c.Business_Plan_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>