src/objects/Business_Plan__c/fields/X5_Business_Day_Reminder__c.field-meta.xml
<CustomField>
    <fullName>X5_Business_Day_Reminder__c</fullName>
    <formula>CASE(MOD( DATEVALUE(Test_Reminder_Date__c) - DATE(1900, 1, 7), 7),
0, Test_Reminder_Date__c+5, 
1, Test_Reminder_Date__c+7, 
2, Test_Reminder_Date__c+7, 
3, Test_Reminder_Date__c+7, 
4, Test_Reminder_Date__c+7, 
5,Test_Reminder_Date__c+7, 
6,Test_Reminder_Date__c+6, 
Test_Reminder_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Business Day Reminder</label>
    <type>Date</type>
</CustomField>