src/objects/Business_Plan__c/validationRules/Affiliates_URL_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Affiliates_URL_Val</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Affiliates_URL__c )) &amp;&amp;
NOT( CONTAINS( Affiliates_URL__c , &apos;WWW.&apos;) ||  CONTAINS( Affiliates_URL__c , &apos;www.&apos;) )</errorConditionFormula>
    <errorDisplayField>Affiliates_URL__c</errorDisplayField>
    <errorMessage>Please enter the correct Affiliates URL</errorMessage>
</ValidationRule>