src/objects/Business_Plan__c/validationRules/Company_URL_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_URL_Val</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Company_URL__c ) &amp;&amp; NOT(ISNEW()) &amp;&amp;  NOT(REGEX(Company_URL__c , &quot;([www]+[.]+[a-z]+[.]+[a-z]*)|([www]+[.]+[a-z]+[.]+[a-z]+[.]+[a-z]*)|([WWW]+[.]+[A-Z]+[.]+[A-Z]*)|([WWW]+[.]+[A-Z]+[.]+[A-Z]+[.]+[A-Z]*)&quot;))</errorConditionFormula>
    <errorDisplayField>Company_URL__c</errorDisplayField>
    <errorMessage>Please enter the correct URL</errorMessage>
</ValidationRule>