src/objects/Business_Plan__c/validationRules/Competitive_Portfolio_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitive_Portfolio_Value</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Competitive_Portfolio_you_represent__c , &apos;Other&apos;)  &amp;&amp; 
ISBLANK( If_Other_provide_Competitive_Portfolio__c )</errorConditionFormula>
    <errorDisplayField>If_Other_provide_Competitive_Portfolio__c</errorDisplayField>
    <errorMessage>You have indicated Other. Please enter Competitive Portfolio.</errorMessage>
</ValidationRule>