src/objects/Business_Plan__c/validationRules/Cust_Satisfation_Dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>Cust_Satisfation_Dependency</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Do_you_measure_Customer_Satisfaction__c , &apos;Yes&apos;) &amp;&amp;  ISBLANK(  TEXT(If_Yes_how_frequent_do_you_measure__c ) )</errorConditionFormula>
    <errorDisplayField>If_Yes_how_frequent_do_you_measure__c</errorDisplayField>
    <errorMessage>Please select the frequency.</errorMessage>
</ValidationRule>