src/objects/Business_Plan__c/validationRules/Facebook_URL_check_on_Business_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Facebook_URL_check_on_Business_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Facebook__c) ),NOT(OR(
	CONTAINS(Facebook__c,&apos;facebook.com&apos;),
	CONTAINS(Facebook__c,&apos;fb.me&apos;)
 )
)
)</errorConditionFormula>
    <errorDisplayField>Facebook__c</errorDisplayField>
    <errorMessage>Please enter the correct Facebook URL containing facebook.com or Fb.me.</errorMessage>
</ValidationRule>