src/objects/Business_Plan__c/validationRules/LinkedIn_URL_check_on_Business_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedIn_URL_check_on_Business_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK( LinkedIn__c ) ),NOT(
	CONTAINS(LinkedIn__c ,&apos;linkedin.com&apos;)
 )
)</errorConditionFormula>
    <errorDisplayField>LinkedIn__c</errorDisplayField>
    <errorMessage>Please enter the correct LinkedIn URL containing linkedin.com.</errorMessage>
</ValidationRule>