src/objects/Business_Plan__c/validationRules/Nokia_Product_Portfolio_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Nokia_Product_Portfolio_Val</fullName>
    <active>true</active>
    <errorConditionFormula>IF(INCLUDES(Nokia_Product_Portfolio_represented__c , &apos;Other&apos;), TRUE, FALSE) &amp;&amp; (ISBLANK(If_Other_provide_Product_Portfolio__c ))</errorConditionFormula>
    <errorDisplayField>If_Other_provide_Product_Portfolio__c</errorDisplayField>
    <errorMessage>You have indicated Other. Please enter Product Portfolio.</errorMessage>
</ValidationRule>