src/objects/Business_Plan__c/validationRules/Other_Nokia_Product_Portfolio_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Nokia_Product_Portfolio_Val</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(INCLUDES(Nokia_Product_Portfolio_represented__c , &apos;Other&apos;)), TRUE, FALSE) &amp;&amp; (NOT(ISBLANK(If_Other_provide_Product_Portfolio__c )))</errorConditionFormula>
    <errorDisplayField>If_Other_provide_Product_Portfolio__c</errorDisplayField>
    <errorMessage>You have already selected Product Portfolio.</errorMessage>
</ValidationRule>