src/objects/Business_Plan__c/validationRules/Status_Should_Be_Approved_For_Cloning.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Should_Be_Approved_For_Cloning</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; Text(Business_Plan_Status__c)  &lt;&gt;  &apos;Approved&apos; &amp;&amp;  IsClone__c</errorConditionFormula>
    <errorMessage>You Can only Clone Business Plan if the Business Plan is approved</errorMessage>
</ValidationRule>