src/objects/Business_Plan__c/validationRules/Test_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Val</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Competitive_Portfolio_you_represent__c)</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>