src/objects/Business_Plan__c/validationRules/Twiitter_URL_check_on_Business_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Twiitter_URL_check_on_Business_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK( Twitter__c ) ),
NOT(OR(
CONTAINS(Twitter__c ,&apos;twitter.com&apos;),
CONTAINS(Twitter__c ,&apos;t.co&apos;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Twitter__c</errorDisplayField>
    <errorMessage>Please enter the correct Twitter URL containing twitter.com or t.co.</errorMessage>
</ValidationRule>