src/objects/Business_Plan__c/validationRules/YouTube_URL_check_on_Business_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>YouTube_URL_check_on_Business_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK( Youtube__c ) ),
NOT(OR(
CONTAINS(Youtube__c ,&apos;youtube.com&apos;),
CONTAINS(Youtube__c ,&apos;y2u.be&apos;),
CONTAINS(Youtube__c ,&apos;youtu.be&apos;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Youtube__c</errorDisplayField>
    <errorMessage>Please enter the correct Youtube URL containing youtube.com, y2u.be or youtu.be.</errorMessage>
</ValidationRule>